issue: Project card title content and alignment issue over the MYCOI, admin dashboard, reviewer dashboard
Project/Award/FCOI
- remove project label and added it along the project card title
- add read more and readless button based on length of the title.
Travel
- remove the enitity label and place the traveller label on that side
- the entity name is added along with the card title

--- a/Client/projects/coi/src/app/admin-dashboard/admin-dashboard.component.scss
+++ b/Client/projects/coi/src/app/admin-dashboard/admin-dashboard.component.scss
@@ -250,7 +250,24 @@ small {
   }
 }
 
-
 .col-custom-travel {
   width: max-content;
+}
+
+.title-text {
+  font-weight: 400;
+  color: #48647f;
+  font-size: 14px;
+}
+
+.readMore {
+  color: #41464B;
+  text-decoration: underline;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.pipe {
+  border-left: 2px solid #48647f82;
+  padding-top: 2px;
 }
